Add styles to login section of checkout

--- a/content/themes/storyrugs/src/sass/_cart.sass
+++ b/content/themes/storyrugs/src/sass/_cart.sass
@@ -4,7 +4,7 @@
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
-body
+body.woocommerce-cart
   > .woocommerce
     width: 80%
     margin: 0 auto
@@ -399,7 +399,7 @@ tbody
     display: none
 
 
-.calculated_shipping
+.cart-collaterals
   .shop_table,
   .shop_table_responsive
     th,
