Add styling to lost password button

--- a/content/themes/storyrugs/src/sass/_checkout.sass
+++ b/content/themes/storyrugs/src/sass/_checkout.sass
@@ -260,13 +260,26 @@ body.woocommerce-checkout
     input[type=submit]
       width: 170px
 
-.woocommerce-form__label-for-checkbox
-  +flex
-  
-  .rememberme
-    display: block
-    width: 20px
-    height: 20px
+    .lost_password
+      width: 190px
+      height: 40px
+      margin: 20px auto 50px
+      padding: 6px
+
+body.woocommerce-checkout
+  label.woocommerce-form__label.woocommerce-form__label-for-checkbox.inline
+    +flex($b:center)
+
+    input.woocommerce-form__input.woocommerce-form__input-checkbox
+      display: block
+      width: 12px
+      height: 12px
+      margin-bottom: 0
+      margin-right: 10px
+      margin-left: 0
+      margin-top: 10px
+      padding: 0
+
 
 
 /* OBJECTS -> For styling objects */
@@ -528,8 +541,47 @@ body.woocommerce-checkout
       text-align: center
       transition: 0.4s color, 0.4s background-color
 
-
-
       &:hover
         color: $darkgrey
         background-color: $white
+
+    .lost_password
+      +gothmed
+      color: $darkgrey
+      font-size: 0.6rem
+      letter-spacing: 0.05rem
+      line-height: 1rem
+      text-align: center
+      text-transform: uppercase
+      transition: 0.4s color
+      color: $white
+      background-color: $darkgrey
+      border-style: solid
+      border-width: 6px
+      border-image: url('../assets/border-button.svg') 25% stretch
+      border-image-outset: 1px
+      transition: 0.4s background-color  
+
+      &:hover
+        background-color: $white
+
+        a
+          color: $darkgrey
+
+    .lost_password a
+      color: $white
+      transition: 0.4s color
+
+body.woocommerce-checkout
+  label.woocommerce-form__label.woocommerce-form__label-for-checkbox.inline
+
+    input.woocommerce-form__input.woocommerce-form__input-checkbox
+      -webkit-appearance: none;
+      appearance: none
+      border: 2px solid $darkgrey
+      border-radius: 9px
+      transition: 0.4s background-color 
+
+      &:checked
+        background-color: $darkgrey
+      
