--- a/content/themes/storyrugs/src/sass/_myAccount.sass
+++ b/content/themes/storyrugs/src/sass/_myAccount.sass
@@ -107,10 +107,10 @@
 
     .woocommerce-form__input-checkbox
       display: inline-block
-      width: 15px
-      height: 15px
-      margin-bottom: 0
-      margin-right: 10px
+      width: 12px
+      height: 12px
+      margin-bottom: 1px
+      margin-right: 5px
       padding: 0
 
     .woocommerce-LostPassword
@@ -280,7 +280,7 @@
       transition: 0.4s background-color 
 
       &:checked
-        background-color: $rust
+        background-color: $darkgrey
 
 .woocommerce-password-strength
   +gothmed
