--- a/content/themes/storyrugs/src/sass/_coContent.sass
+++ b/content/themes/storyrugs/src/sass/_coContent.sass
@@ -4,6 +4,8 @@
 /* includes positioning styles like display, padding, margin, height */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
+
+
 .co-content
   position: relative
   padding: 75px
@@ -16,6 +18,9 @@
       top: 370px
       right: 8%
       width: 340px
+
+  .zero-top
+    top: 50px
 
   .co-head
     position: relative
@@ -91,6 +96,8 @@
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .co-content
+  .content-floater
+    transition: 0.6s all cubic-bezier(.29,.54,.76,.6)
   .co-head
     &:after
       content: " "
