--- a/content/themes/storyrugs/src/sass/_purchaseForm.sass
+++ b/content/themes/storyrugs/src/sass/_purchaseForm.sass
@@ -56,14 +56,16 @@
     .ptextarea
       padding-top: 10px
 
-
+.confirmation
+  margin-top: 20px
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
 .purchase-form
-  .form-header
+  .form-header,
+  .confirmation
     h3
       +gothmed
       font-size: 0.8rem
