--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -14,13 +14,13 @@ p
 html 
   font-size: 18px
   box-sizing: border-box
-  background-color: $black
+  background-color: $white
 
 *, *:before, *:after
   box-sizing: inherit
 
 body
-  padding: 22px
+  padding: 32px
   background-color: $white
 
   +tablet
