--- a/content/themes/storyrugs/src/sass/_coImages.sass
+++ b/content/themes/storyrugs/src/sass/_coImages.sass
@@ -16,19 +16,25 @@
       z-index: 1
 
   .wrapper:first-of-type
-    height: 100%
-    padding: 75px
+    height: 200px
     overflow: hidden
+
+    +tablet
+      height: 100%
+      padding: 75px
 
     +tablet 
       height: 800px
       padding: 0 75px 140px 75px
 
     .co-image
-      height: 800px
+      height: 200px
       max-width: 680px
       margin-left: auto
-      margin-right: 0
+      margin-right: auto
+
+      +tablet
+        height: 800px
 
   .wrapper:nth-of-type(even)
     margin-top: 15px
@@ -48,7 +54,7 @@
       height: 650px
       max-width: 680px
       margin-left: auto
-      margin-right: 0
+      margin-right: auto
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
