--- a/content/themes/storyrugs/src/sass/_myAccount.sass
+++ b/content/themes/storyrugs/src/sass/_myAccount.sass
@@ -113,14 +113,18 @@
     input[type=submit]
       margin-right: 0
 
+      +tiny
+        width: 100%
+
 
     .woocommerce-form__input-checkbox
       display: inline-block
       width: 12px
       height: 12px
-      margin-bottom: 1px
-      margin-right: 5px
-      padding: 0
+      margin-bottom: -1px
+      margin-top: 0
+      margin-right: 15px
+      padding: 0px
 
     .woocommerce-LostPassword
 
@@ -131,24 +135,33 @@
   +flex($b: flex-end, $c: right)
 
   input[type=submit]
-    flex: 0 0 100px
-    margin-left: 0
-    margin-right: 0
+    flex: 0 0 100%
+    +tablet
+      flex: 0 0 100px
+      margin-left: 0
+      margin-right: 0
 
   .forgot_password_d
-    flex: 0 0 160px
-    display: block
+    flex: 0 0 100%
+    margin-bottom: 20px
     height: 40px
     padding: 5px
-    margin-right: 20px
+    display: block
+
+    +tablet
+      flex: 0 0 160px
+      margin-right: 20px
 
   .woocommerce-form__label-for-checkbox
     flex: 0 0 100%
 
     .remember-me-wrapper
-      width: 150px
-      display: block
-      margin: 10px auto 0
+
+      +tablet
+        width: 170px
+        display: block
+        margin-top: -60px
+        margin-bottom: 60px
 
 .woocommerce-password-hint,
 .woocommerce-password-strength,
@@ -335,8 +348,8 @@ body.logged-in
     .woocommerce-form__input-checkbox
       -webkit-appearance: none;
       appearance: none
-      border: 2px solid $darkgrey
-      border-radius: 9px
+      border: 1px solid $darkgrey
+      border-radius: 4px
       transition: 0.4s background-color 
 
       &:checked
@@ -412,10 +425,8 @@ body.logged-in
 
 span.remember-me-wrapper
   span 
-    +millerbanner
-    color: $darkgrey
-    font-size: 1.1rem
-    letter-spacing: 0.001rem
-    line-height: 1.1rem
+    +gothmed
+    font-size: 0.75rem
+    letter-spacing: 0.1rem
     text-align: center
-    text-transform: initial
+    text-transform: uppercase
