--- a/content/themes/storyrugs/src/sass/_purchaseForm.sass
+++ b/content/themes/storyrugs/src/sass/_purchaseForm.sass
@@ -16,7 +16,10 @@
 
   form
     +flex
+    max-width: 900px
     margin-top: 50px
+    margin-left: auto
+    margin-right: auto
 
     .purchase
       margin-bottom: 30px
