Add courtney to the coding list

--- a/content/themes/storyrugs/src/sass/_coContent.sass
+++ b/content/themes/storyrugs/src/sass/_coContent.sass
@@ -56,7 +56,9 @@ body.single-product
       margin-top: 50px
 
   .co-attributes
-    margin-top: 150px
+    margin-top: 50px
+    +tablet
+      margin-top: 150px
 
   .co-dimensions
     width: 100%
@@ -75,7 +77,10 @@ body.single-product
       margin-top: 50px
   
   .co-share
-    margin-top: 150px
+    margin-top: 50px
+
+    +tablet
+      margin-top: 150px
 
     .social-wrapper
       +flex
