--- a/content/themes/storyrugs/src/sass/_collection.sass
+++ b/content/themes/storyrugs/src/sass/_collection.sass
@@ -31,3 +31,17 @@
 /* Includes cosmetic styles like color, typography, and borders */
 /* INCEPTION RULE: DO NOT nest more than 4  */
 
+body.post-type-archive
+  .product-text
+    h3
+      +tiny
+        font-size: 2rem
+
+    .desc
+      +tiny
+        font-size: 0.5rem
+
+
+    .price
+      +tiny
+        font-size: 0.7rem
