--- a/content/themes/storyrugs/src/sass/_myAccount.sass
+++ b/content/themes/storyrugs/src/sass/_myAccount.sass
@@ -381,10 +381,14 @@ body.logged-in
 
 .woocommerce-password-strength
   +gothmed
-  font-size: 0.75rem
+  font-size: 0.65rem  
   letter-spacing: 0.1rem
   text-align: center
   text-transform: uppercase
+  line-height: 1rem
+
+  +tablet
+    font-size: 0.75rem
 
 .woocommerce-password-hint
   +millerbanner
@@ -399,7 +403,7 @@ body.logged-in
   color: $darkgrey
   font-size: 1.1rem
   letter-spacing: 0.005rem
-  line-height: 1.9rem
+  line-height: 1.3rem
   text-align: center
   transition: 0.4s color
 
@@ -450,10 +454,13 @@ body.logged-in
 span.remember-me-wrapper
   span 
     +gothmed
-    font-size: 0.75rem
+    font-size: 0.65rem
     letter-spacing: 0.1rem
     text-align: center
     text-transform: uppercase
+
+    +tablet
+      font-size: 0.75rem
 
 body.woocommerce-edit-address
   h3
