Add event listener to contact form 7

--- a/content/themes/storyrugs/src/sass/_purchaseForm.sass
+++ b/content/themes/storyrugs/src/sass/_purchaseForm.sass
@@ -96,6 +96,12 @@
     margin-top: -25px
     margin-bottom: 9px
 
+  .wpcf7-response-output
+    position: relative
+    z-index: 150
+
+
+
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
@@ -108,7 +114,7 @@
     transition: 0.4s opacity ease-out
 
   .overlay-toggle
-    opacity: 0.78
+    opacity: 0.9
 
   .form-header,
   .confirmation
@@ -168,7 +174,7 @@
   .wpcf7-response-output
     +gothbook
     color: $darkgrey
-    font-size: 0.65rem
+    font-size: 0.75rem
     letter-spacing: 0.05rem
     line-height: 0.9rem
     text-align: center
