--- a/content/themes/storyrugs/src/sass/_products.sass
+++ b/content/themes/storyrugs/src/sass/_products.sass
@@ -22,6 +22,7 @@
       .product-text
         opacity: 1
 
+
     +tablet
       flex: 0 0 388px
       height: 541px
@@ -40,7 +41,6 @@
 
   +tablet
     opacity: 0
-
 
   h3
     padding-top: 80px
@@ -65,6 +65,10 @@
     width: 100px
     display: block
     margin: 0 auto 0
+
+.outofstock
+  .product-text
+    opacity: 0.65
 
 
 /* OBJECTS -> For styling objects */
