--- a/content/themes/storyrugs/src/sass/_products.sass
+++ b/content/themes/storyrugs/src/sass/_products.sass
@@ -66,9 +66,37 @@
     display: block
     margin: 0 auto 0
 
+.product-sold
+  opacity: 0
+
 .outofstock
+  position: relative
+
+  .product-sold
+    +tablet
+      position: absolute
+      top: 0
+      left: 0
+      z-index: 150
+      display: flex
+      flex-flow: column
+      justify-content: center
+      opacity: 0.6
+      width: 100%
+      height: 100%
+      transition: 0.6s opacity ease
+
+    .onsale
+
   .product-text
-    opacity: 0.65
+
+    +tablet
+      opacity: 0
+
+  &:hover
+    .product-sold
+      opacity: 0
+
 
 
 /* OBJECTS -> For styling objects */
@@ -115,3 +143,19 @@
 
   .onsale
     color: $rust
+
+.product-sold
+  +img($c: 44%)
+  background-color: $white
+  background-image: url('../assets/overlay-icon-black.svg')
+
+
+  .onsale
+    +gothbold
+    color: $black
+    font-size: 1.6rem
+    line-height: 1.2em
+    text-align: center
+    text-transform: uppercase
+
+
