--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -61,12 +61,37 @@ img
     transition: 2s margin cubic-bezier(0.68, -0.55, 0.265, 1.55)
 
 .lazy-logo
+  opacity: 0
+  -webkit-transform: translateX(0) translateY(-140px)
+  -moz-transform: translateX(0) translateY(-140px)
+  -o-transform: translateX(0) translateY(-140px)
+  -ms-transform: translateX(0) translateY(-140px)
+  transform: translateX(0) translateY(-140px)
+  transition: 1.5s opacity ease-in-out, 1.5s transform cubic-bezier(0.215, 0.61, 0.355, 1)
+
+.lazy-products
+  position: relative
+  opacity: 0
   -webkit-transform: translateX(0) translateY(140px)
   -moz-transform: translateX(0) translateY(140px)
   -o-transform: translateX(0) translateY(140px)
   -ms-transform: translateX(0) translateY(140px)
   transform: translateX(0) translateY(140px)
+  transition: 2s opacity ease-in-out, 2s transform cubic-bezier(0.215, 0.61, 0.355, 1)
+  // transition-delay: 0.5s
 
+@for $num from 1 to 40
+  .lazy-products:nth-child(#{$num})
+    transition-delay: $num * 2s
+
+.lazy-single-product
+  opacity: 1
+  -webkit-transform: translateX(-140px) translateY(0)
+  -moz-transform: translateX(-140px) translateY(0)
+  -o-transform: translateX(-140px) translateY(0)
+  -ms-transform: translateX(v) translateY(0)
+  transform: translateX(-140px) translateY(0)
+  transition: 2s opacity ease-in-out, 2s transform cubic-bezier(0.215, 0.61, 0.355, 1)
 
 .load
   opacity: 1
@@ -75,6 +100,7 @@ img
   -o-transform: translateX(0) translateY(0)
   -ms-transform: translateX(0) translateY(0)
   transform: translateX(0) translateY(0)
+
 
 
 /* Styles ... */
