--- a/content/themes/storyrugs/src/sass/_cart.sass
+++ b/content/themes/storyrugs/src/sass/_cart.sass
@@ -135,6 +135,11 @@ body.woocommerce-cart
     th
       padding-bottom: 10px
       padding-right: 10px
+      max-width: 80px
+
+      small
+        display: block
+        width: 150px
 
     td
       padding-top: 10px
@@ -256,6 +261,23 @@ tbody
             width: 100%
             height: 35px
 
+.shipping-calculator-form
+  padding-top: 15px
+
+  p
+    margin-bottom: 15px
+
+  select
+    width: 200px
+    height: 30px
+    overflow: hidden
+
+  input
+    padding: 5px
+    height: 35px
+
+  button
+    height: 30px
 
 
 /* OBJECTS -> For styling objects */
@@ -411,6 +433,10 @@ tbody
       line-height: 1rem
       text-transform: uppercase
 
+      small 
+        font-size: 0.45rem
+        color: #b5b1b1
+
     td a
       color: $rust
       transition: 0.4s color
@@ -461,3 +487,43 @@ tbody
   letter-spacing: 0.005rem
   line-height: 1.9rem
   text-align: center
+
+.shipping-calculator-form
+  select
+    +gothbook
+    font-size: 0.6rem
+    letter-spacing: 0.1rem
+    line-height: 1rem
+    text-transform: uppercase
+    border-style: solid
+    border-width: 6px
+    border-image: url('../assets/border-button.svg') 25% stretch
+    border-image-outset: 1px
+
+  input
+    +gothbook
+    font-size: 0.6rem
+    letter-spacing: 0.1rem
+    line-height: 1rem
+    text-transform: uppercase
+
+  button
+    +gothmed
+    background-color: $darkgrey
+    color: $white
+    font-size: 0.6rem
+    letter-spacing: 0.1rem
+    line-height: 1rem
+    text-transform: uppercase
+    border-style: solid
+    border-width: 6px
+    border-image: url('../assets/border-button.svg') 25% stretch
+    border-image-outset: 1px
+    transition: 0.4s background-color, 0.4s color
+
+    &:hover
+      color: $darkgrey
+      background-color: $white
+
+
+
