Add styles for Authorize.Net prompts

--- a/content/themes/storyrugs/src/sass/_cart.sass
+++ b/content/themes/storyrugs/src/sass/_cart.sass
@@ -279,6 +279,13 @@ tbody
   button
     height: 30px
 
+.wc_payment_methods
+  .wc_payment_method
+    label
+      padding-top: 10px
+      img
+        display: none
+
 
 /* OBJECTS -> For styling objects */
 /* Includes cosmetic styles like color, typography, and borders */
@@ -524,6 +531,15 @@ tbody
     &:hover
       color: $darkgrey
       background-color: $white
+
+.wc_payment_methods
+  .wc_payment_method
+    a 
+      color: $rust
+      transition: 0.4s color
+
+      &:hover
+        color: $darkgrey
 
 
 
