--- a/content/themes/storyrugs/src/sass/_checkout.sass
+++ b/content/themes/storyrugs/src/sass/_checkout.sass
@@ -291,6 +291,13 @@ body.woocommerce-checkout
 table.shop_table.woocommerce-checkout-review-order-table
   width: 100%
 
+.wc_payment_method.payment_method_authorize_net_aim
+  label
+    display: block
+    width: 100%
+ 
+    img
+      display: none
 
 
 /* OBJECTS -> For styling objects */
@@ -594,4 +601,6 @@ body.woocommerce-checkout
 
       &:checked
         background-color: $darkgrey
+
+
       
