--- a/content/themes/storyrugs/src/sass/_coContent.sass
+++ b/content/themes/storyrugs/src/sass/_coContent.sass
@@ -55,6 +55,10 @@ body.single-product
     .desc
       margin-top: 50px
 
+      em
+        display: block
+        margin-top: 25px
+
   .co-attributes
     margin-top: 50px
     +tablet
@@ -154,6 +158,11 @@ body.single-product
       line-height: 1.5rem
       letter-spacing: 0.01rem
       text-align: center
+
+      em
+        +chronicitalic
+        font-size: 0.9rem
+        line-height: 1.3rem
 
   .co-attributes
     +gothmed
