--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -55,12 +55,14 @@ img
 
 .lazy-logo
   opacity: 0
-  -webkit-transform: translateX(0) translateY(-30px)
-  -moz-transform: translateX(0) translateY(-30px)
-  -o-transform: translateX(0) translateY(-30px)
-  -ms-transform: translateX(0) translateY(-30px)
-  transform: translateX(0) translateY(-30px)
-  transition: 1.5s opacity ease-in-out, 1.5s transform cubic-bezier(0.215, 0.61, 0.355, 1)
+  // -webkit-transform: translateX(0) translateY(-30px)
+  // -moz-transform: translateX(0) translateY(-30px)
+  // -o-transform: translateX(0) translateY(-30px)
+  // -ms-transform: translateX(0) translateY(-30px)
+  // transform: translateX(0) translateY(-30px)
+  transition: 1.5s opacity ease-in-out
+  // 1.5s transform cubic-bezier(0.215, 0.61, 0.355, 1)
+
 
 .lazy-products
   position: relative
