--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -36,7 +36,13 @@ img
   border-style: solid
   border-width: 6px
   border-image: url('../assets/border-button.svg') 25% stretch
+  -webkit-border-image: url('../assets/border-button.svg') 25% stretch
+  -moz-border-image: url('../assets/border-button.svg') 25% stretch
+  -ms-border-image: url('../assets/border-button.svg') 25% stretch
   border-image-outset: 1px
+  -webkit-border-image-outset: 1px
+  -moz-border-image-outset: 1px
+  -ms-border-image-outset: 1px
 
 .lazy
   position: relative
