--- a/content/themes/storyrugs/src/sass/styles.sass
+++ b/content/themes/storyrugs/src/sass/styles.sass
@@ -44,6 +44,10 @@ img
   -moz-border-image-outset: 1px
   -ms-border-image-outset: 1px
 
+  +browser(Trident)
+    border-image: none
+    border-width: 4px
+
 .lazy
   position: relative
   opacity: 0
