--- a/content/themes/storyrugs/src/sass/_nav.sass
+++ b/content/themes/storyrugs/src/sass/_nav.sass
@@ -49,10 +49,12 @@ nav
 
   a
     flex: 0 0 auto
+    display: block
     position: relative
     padding-bottom: 4px
     margin-bottom: 8px
-    width: 100%
+    margin-left: auto
+    margin-right: auto
 
     +tablet
       margin-bottom: 0
